moving to 1.8